--- a/samples/preview/apps/colorapp/ecs/ecs-colorapp.yaml
+++ b/samples/preview/apps/colorapp/ecs/ecs-colorapp.yaml
@@ -7,12 +7,12 @@ Parameters:
   SideCarRouterManagerImage:
     Type: String
     Description: Sidecar router manager that sets up networking for transparent proxy
-    Default: "989319603630.dkr.ecr.us-west-2.amazonaws.com/awslatticesidecarproxyroutemanager/awslatticesidecarproxyrouter:1.0.x.x"
+    Default: "989319603630.dkr.ecr.us-west-2.amazonaws.com/awslatticesidecarproxyroutemanager/awslatticesidecarproxyroutemanager:1.0.3.0"
 
   EnvoyImage:
     Type: String
     Description: Envoy image to use
-    Default: "111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-lattice-envoy:v1.8.0.X-beta"
+    Default: "111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-lattice-envoy:v1.8.0.1-beta"
 
   EnvoyLogLevel:
     Type: String
