Updated sample preview reports url

--- a/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
+++ b/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
@@ -207,7 +207,7 @@ Resources:
             - Name: "PORT"
               Value: "9080"
             - Name: "REPORTS_URI"
-              Value: "reports.default.svc.cluster.local:9080"
+              Value: "http://reports.default.svc.cluster.local:9080"
         - Name: envoy
           Image: { Ref: EnvoyImage }
           Essential: true
